# C-Concurrent-Fork-Server

./: .gitignore  CMakeLists.txt  Makefile  README.md  SOP.md  capture_traffic.sh  final_test.sh  test_logging.sh
.github/workflows/: cmake-multi-platform.yml
attacks/: attack_1_zombie.sh  attack_2_slowloris.sh  attack_3_sigpipe.sh
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/_cfg/ides/: claude-code.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
docs/: SOP.md  architecture.md  epics.md  prd.md  project-brief.md
src/client/: client.c
src/libutils/: log.c  log.h
src/server/: child.c  child.h  server.c  signal.c  signal.h
tests/: test_fork_failure.sh  test_io_errors.sh  test_server_good.sh  test_sigchld.sh  test_sigpipe.sh  test_timeout.sh
